2005-03-04  Matthias Wimmer  <m@tthias.net>

    * jabberd/jabberd.h: better dialback error logging
    * jabberd/mio.c: same
    * jabberd/lib/xstream.c: same
    * jabberd/lib/jabberdlib.h: same
    * jabberd/deliver.c: same
    * dialback/dialback_out.c: same
    * jabberd/jabberd.c: temp. removed a call that causes shutdown crashes

2005-03-03  Matthias Wimmer  <m@tthias.net>

    * dialback/dialback_in.c: improved stream error logging
    * dialback/dialback_out.c: same
    * jabberd/lib/jabberdlib.h: same
    * jabberd/lib/xstream.c: same
    * xdb_file/xdb_file.c: Don't log all those "file not found" warnings

2005-03-02  Matthias Wimmer  <m@tthias.net>

    * dialback/dialback_in.c: recognize stream errors and log as such
    * dialback/dialback_out.c: don't request dialback if not needed,
    	don't send the id attribute on outgoing connections

2005-02-28  Matthias Wimmer  <m@tthias.net>

    * pthsock/client.c: support for the register stream feature
    * dialback/dialback_in.c: fixed problem if compiled without SSL support

2005-02-27  Matthias Wimmer  <m@tthias.net>

    * configure.in: Check for existence of crypt.h header file
    * jsm/modules/mod_groups.c: bugfix for checking the existence of a gid
    * jsm/modules/mod_auth_crypt.c: include crypt.h if existant, renamed
	function _get_salt() to mod_auth_crypt_get_salt()
    * jsm/modules/mod_filter.c: removed unused element m from action_struct
    * jsm/jsm.c: bugfix for init of the list of "global trusted" jids

2005-02-25 Maqi <maqi@jabberstudio.org>

    * removed mod_auth_0k module
    * changed version to 1.4.4pre20050225
    * added info on -U switch
    * made libidn a requirement
    * removed authors list from README, see AUTHORS
    * removed other outdated info from README

2005-02-24  Matthias Wimmer  <m@tthias.net>

    * jsm/modules/mod_presence.c: Bugfix: presences with multiple stamps bug

2005-02-23  Matthias Wimmer  <m@tthias.net>
